# ha-unifi-presence

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  hacs.json  pyproject.toml
.github/: topics.yml
.github/workflows/: validate.yml
custom_components/unifi_presence/: __init__.py  config_flow.py  const.py  coordinator.py  device_tracker.py  diagnostics.py  helpers.py  icons.json  manifest.json  quality_scale.yaml  strings.json  websocket.py
custom_components/unifi_presence/translations/: en.json
tests/: conftest.py  test_config_flow.py  test_coordinator.py  test_device_tracker.py  test_diagnostics.py  test_helpers.py  test_init.py  test_websocket.py
